base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: frontend
spec:
  replicas: 5
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: node
        name: frontend
        resources:
          requests:
            cpu: 5m
            memory: 15Mi
          limits:
            cpu: 20m
            memory: 64Mi
