base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: frontend
  namespace: dev
spec:
  ports:
  - name: web
    port: 80
  selector:
    app: web
